Add Error, Status and Fibre classes, move BlockTypes enum to separate file, related updates plus tests and references
git-svn-id: svn+ssh://svn.cern.ch/reps/atlasoff/Trigger/TrigT1/L1Topo/L1TopoRDO/trunk@645724 4525493e-7705-40b1-a816-d608a930855b

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2015-02-10  Simon George  <S.George@rhul.ac.uk>
+
+	* Add Error, Status and Fibre classes
+	* Move BlockTypes from Helpers to own file
+	* Updated unit tests & references
+	* L1TopoRDO-00-00-04
+
 2015-01-27  Simon George  <s.george@rhul.ac.uk>
 
 	* src/Helpers.cxx: remove debug printout to stdout
