vector element access changed from [i] to .at(i)
git-svn-id: svn+ssh://svn.cern.ch/reps/atlasoff/Trigger/TrigT1/L1Topo/L1TopoRDO/trunk@646053 4525493e-7705-40b1-a816-d608a930855b

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2015-02-11  Simon George  <S.George@rhul.ac.uk>
+
+	* src/Fibre.cxx: change vector element access from [i] to .at(i)
+	so it is bounds-checked.
+	* test/L1TopoRDO_test.cxx: minor output formatting
+
+
+
 2015-02-10  Simon George  <S.George@rhul.ac.uk>
 
 	* Add Error, Status and Fibre classes
