save and restore ostream state in print helper ATR-10179
git-svn-id: svn+ssh://svn.cern.ch/reps/atlasoff/Trigger/TrigT1/L1Topo/L1TopoRDO/trunk@646616 4525493e-7705-40b1-a816-d608a930855b

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2015-02-12  Simon George  <S.George@rhul.ac.uk>
+
+	* src/Helpers.cxx: save & restore ostream state in print helper
+	functions, using boost::io::ios_all_saver. Fixes ATR-10179 CID 29057.
+
+	* L1TopoRDO-00-00-05
+
 2015-02-11  Simon George  <S.George@rhul.ac.uk>
 
 	* src/Fibre.cxx: change vector element access from [i] to .at(i)
