fixes for clang build
git-svn-id: svn+ssh://svn.cern.ch/reps/atlasoff/Trigger/TrigT1/L1Topo/L1TopoRDO/trunk@696808 4525493e-7705-40b1-a816-d608a930855b

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2015-09-25  Simon George  <S.George@rhul.ac.uk>
+
+	* changes to fix clang build, moving operator<< overload functions
+	into L1Topo namespace.
+	* L1TopoRDO-00-00-08
+
 2015-03-08  Simon George  <S.George@rhul.ac.uk>
 
 	* test/L1TopoRDO_test.cxx (test14): update ModuleID unit tests for
